--- a/etch-a-sketch/style.css
+++ b/etch-a-sketch/style.css
@@ -1,13 +1,22 @@
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 #container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-  
-  .square {
-    width: 30px;
-    height: 30px;
-    margin: 1px;
-    border: 1px solid black;
-    transition: background-color 0.5s;
-  }
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 80vh;
+  width: 100%;
+}
+
+.square {
+  aspect-ratio: 1 / 1;
+  width: calc(100% / 16);
+  box-sizing: border-box;
+  border: 0.5px solid black;
+  transition: background-color 0.5s;
+}
+
